--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Notes app built with the MERN stack.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.21",
-    "nodemon": "^2.0.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^5.13.21"
   }
 }
